--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "tower-stream",
   "version": "0.0.1",
-  "main": "./index.js"
+  "main": "./index.js",
+  "dependencies": {
+    "emitter-component": "~1.0.0"
+  }
 }
