--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.1",
   "main": "./index.js",
   "dependencies": {
-    "emitter-component": "~1.0.0"
+    "tower-emitter": "*"
   }
 }
