--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./index.js",
   "dependencies": {
     "tower-emitter": "*",
-    "tower-param": "*"
+    "tower-param": "*",
+    "tower-attr": "*"
   }
 }
