--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "tower-emitter": "*",
     "tower-param": "*",
-    "tower-attr": "*"
+    "tower-attr": "*",
+    "tower-load": "*"
   }
 }
