--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tower-stream",
-  "version": "0.0.1",
+  "version": "0.5.0pre",
   "main": "./index.js",
   "dependencies": {
-    "tower-emitter": "*",
-    "tower-param": "*",
-    "tower-attr": "*",
-    "tower-load": "*"
+    "tower-emitter": "~0.5.0pre",
+    "tower-param": "~0.5.0pre",
+    "tower-attr": "~0.5.0pre",
+    "tower-load": "~0.5.0pre"
   }
 }
