--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "tower-stream",
-  "version": "0.1.0pre",
+  "version": "0.1.0",
   "main": "./index.js",
   "dependencies": {
-    "tower-emitter": "~0.1.0pre",
-    "tower-param": "~0.1.0pre",
-    "tower-attr": "~0.1.0pre",
-    "tower-load": "~0.1.0pre"
+    "tower-emitter": "~0.1.0",
+    "tower-param": "~0.1.0",
+    "tower-attr": "~0.1.0",
+    "tower-load": "~0.1.0"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "http://github.com/tower/stream.git"
   }
 }
